# nice-dialogs

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  commitlint.yml  publish.yml  seed-release-branch.yml  tests.yml
examples/: main.py
examples/pages/: index.py
nice_dialog/dialogs/: confirmation.py  cron_editor.py  datetime_picker.py  upload_file.py
nice_dialogs/dialogs/: __init__.py  confirmation.py  cron_editor.py  datetime_picker.py  labelmaker.py  types.py  upload_file.py
tests/: conftest.py  test_confirmation_dialog.py  test_cron_editor.py  test_datetime_picker.py  test_labelmaker.py  test_upload_file.py
