[project]
name = "nice-dialog"
description = "Package containing reusable general-purpose NiceGUI dialogs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "cron-converter>=1.3.1",
    "nicegui >= 3.10",
    "pydantic-extra-types",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "pytest >= 9",
    "pywebview",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nice_dialog"]

[tool.hatch.version]
path = "nice_dialog/__init__.py"
fallback-version = "0.0.0"

[tool.mypy]
strict = true
