[project]
name = "nice-dialog"
description = "Package containing reusable general-purpose NiceGUI dialogs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "cron-converter>=1.3.1",
    "nicegui >= 3.10",
    "pydantic-extra-types",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "pytest >= 9",
    "pytest-asyncio",
    "pytest-cov",
    "pywebview",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nice_dialog"]

[tool.hatch.version]
path = "nice_dialog/__init__.py"
fallback-version = "0.0.0"

[tool.mypy]
strict = true

[tool.pytest]
asyncio_mode = "auto"
addopts = ["--cov=nice_dialog",  "--cov-fail-under=90", "-p nicegui.testing.user_plugin"]
testpaths = ["tests"]
main_file = "examples/main.py"  # NiceGUI Test Plugin

[tool.ruff.lint]
ignore = [
    "COM812",
]

select = [
    "E",
    "F",
    "N",
    "W",
    "COM",
    "FBT",
    "UP",
    "ASYNC",
    "DTZ",
    "ERA",
    "PTH",
    "FAST",
    "FURB",
    "PERF",
    "EM102",
    "G004",
    "T20",
    "LOG",
    "RUF100",
]
