[project]
name = "nice-dialog"
description = "Package containing reusable general-purpose NiceGUI dialogs"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Typing :: Typed",
    "Private :: Do Not Upload",
]
requires-python = ">=3.13"
dependencies = [
    "nicegui >= 3.10",
    "pydantic-extra-types[cron] >= 2.10.6",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "faker",
    "mypy",
    "pre-commit",
    "pytest >= 9",
    "pytest-asyncio",
    "pytest-cov",
    "pywebview",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nice_dialog"]

[tool.hatch.version]
path = "nice_dialog/__init__.py"
fallback-version = "0.0.0"

[tool.mypy]
strict = true

[tool.pytest]
asyncio_mode = "auto"
addopts = ["--cov=nice_dialog",  "--cov-fail-under=90", "-p nicegui.testing.user_plugin"]
testpaths = ["tests"]
main_file = "examples/main.py"  # NiceGUI Test Plugin

[tool.ruff.lint]
ignore = [
    "COM812",
]

select = [
    "E",
    "F",
    "N",
    "W",
    "COM",
    "FBT",
    "UP",
    "ASYNC",
    "DTZ",
    "ERA",
    "PTH",
    "FAST",
    "FURB",
    "PERF",
    "EM102",
    "G004",
    "T20",
    "LOG",
    "RUF100",
]
